--- a/deck_builder/editor/static/styles/editor.css
+++ b/deck_builder/editor/static/styles/editor.css
@@ -200,7 +200,13 @@ body {
     outline: 0;
     border-radius: var(--border-radius);
     resize: none;
-    padding: 10px
+    padding: 10px;
+    transition-property: border;
+    transition-duration: 0.2s;
+}
+
+.upload-text-input:hover {
+    border: 2px solid var(--color-info-dark)
 }
 
 .upload-text-input:focus {
@@ -228,4 +234,10 @@ body {
     width: 100%;
     height: 100%;
     cursor: pointer;
+    transition-property: border;
+    transition-duration: 0.2s;
+}
+
+.image-input:hover {
+    border: 3px dashed var(--color-dark);
 }
