--- a/deck_builder/editor/templates/editor.html
+++ b/deck_builder/editor/templates/editor.html
@@ -74,7 +74,10 @@
             <div class="upload-text-wrapper" id="upload-text-wrapper">
                 <textarea name="upload-text-input" id="upload-text-input" class="upload-text-input"
                     placeholder="Enter your text here..."></textarea>
-                <button class="upload-text-submit-button" id="submit-text" disabled>Submit text</button>
+                <button class="upload-text-submit-button" id="submit-text" disabled>
+                    <span class="submit-button-text" id="submit-button-text">Submit text</span>
+                    <div class="loading-icon hidden" id="loading-icon"></div>
+                </button>
             </div>
         </div>
     </main>
