--- a/deck_builder/editor/static/styles/editor.css
+++ b/deck_builder/editor/static/styles/editor.css
@@ -21,7 +21,8 @@
 ::before {
     margin: 0;
     box-sizing: border-box;
-    font-family: var(--font-family)
+    font-family: var(--font-family);
+    color: var(--color-dark);
 }
 
 .divider {
@@ -260,8 +261,15 @@ body {
     border: 2px solid transparent;
     background-color: var(--color-primary);
     border-radius: var(--border-radius);
-    font-size: 14px;
     cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
+.submit-button-text {
+    font-size: 15px;
+    font-weight: 500;
 }
 
 .upload-text-submit-button:hover {
@@ -272,4 +280,23 @@ body {
     border: 2px solid transparent !important;
     cursor: not-allowed !important;
     background-color: var(--color-disabled) !important;
+}
+
+.loading-icon {
+    border: 3px solid var(--color-dark);
+    border-top: 4px solid transparent;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
