Renamed editor to create deck

--- a/deck_builder/create_deck/templates/create_deck.html
+++ b/deck_builder/create_deck/templates/create_deck.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editor - Deck Builder</title>
+    <title>Create Deck - Deck Builder</title>
     <meta name="description" content="Upload an image and download the Anki questions with answers!">
 
-    <link rel="stylesheet" href="{{ url_for('editor_bp.static', filename='styles/editor.css') }}">
+    <link rel="stylesheet" href="{{ url_for('create_deck_bp.static', filename='styles/create_deck.css') }}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
 
-    <script src="{{ url_for('editor_bp.static', filename='js/editor.js')}}" defer></script>
+    <script src="{{ url_for('create_deck_bp.static', filename='js/create_deck.js')}}" defer></script>
 </head>
 
 <body>
