--- a/deck_builder/create_deck/static/styles/create_deck.css
+++ b/deck_builder/create_deck/static/styles/create_deck.css
@@ -379,3 +379,8 @@ body {
     cursor: not-allowed !important;
     background-color: var(--color-disabled) !important;
 }
+
+.submit-error,
+.chatgpt-error {
+    color: var(--color-danger-dark)
+}
