--- a/deck_builder/create_deck/templates/create_deck.html
+++ b/deck_builder/create_deck/templates/create_deck.html
@@ -82,6 +82,7 @@
                         <span class="submit-button-text" id="submit-button-image-text">Submit text</span>
                         <div class="loading-icon hidden" id="loading-icon-image-text"></div>
                     </button>
+                    <p class="chatgpt-error hidden" id="image-text-chatgpt-error"></p>
                 </div>
             </div>
             <div class="upload-text-wrapper hidden" id="upload-text-wrapper">
