--- a/deck_builder/create_deck/templates/create_deck.html
+++ b/deck_builder/create_deck/templates/create_deck.html
@@ -92,6 +92,7 @@
                     <span class="submit-button-text" id="submit-button-text">Submit text</span>
                     <div class="loading-icon hidden" id="loading-icon"></div>
                 </button>
+                <p class="chatgpt-error hidden" id="text-chatgpt-error"></p>
             </div>
         </div>
     </main>
