add download button to editor

--- a/deck_builder/editor/templates/editor.html
+++ b/deck_builder/editor/templates/editor.html
@@ -53,6 +53,7 @@
             </div>
             {% endfor %}
         </div>
+        <button id=download-button> Download your deck! </button>
     </main>
 </body>
 
