--- a/deck_builder/editor/static/styles/editor.css
+++ b/deck_builder/editor/static/styles/editor.css
@@ -220,3 +220,16 @@ body {
     transition-property: color;
     user-select: none;
 }
+
+#download-button {
+    width: 200px;
+    height: 40px;
+    color: var(--color-dark);
+    background: var(--color-white);
+    border: 1px solid black;
+    border-radius: var(--border-radius);
+}
+
+#download-button:hover {
+    background-color: var(--color-light);
+}
