add download id

--- a/deck_builder/editor/templates/editor.html
+++ b/deck_builder/editor/templates/editor.html
@@ -53,7 +53,7 @@
             </div>
             {% endfor %}
         </div>
-        <button id=download-button> Download your deck! </button>
+        <button id=download-button onclick="download_deck({{ id }})"> Download your deck! </button>
     </main>
 </body>
 
