--- a/deck_builder/editor/templates/editor.html
+++ b/deck_builder/editor/templates/editor.html
@@ -47,6 +47,13 @@
             <div class="page-content-card">
                 <textarea class="page-content-card-front">{{ card[0] }}</textarea>
                 <textarea class="page-content-card-back">{{ card[1] }}</textarea>
+                <div class="icon-trash" style="float: left">
+                    <div class="trash-lid"></div>
+                    <div class="trash-container"></div>
+                    <div class="trash-line-1"></div>
+                    <div class="trash-line-2"></div>
+                    <div class="trash-line-3"></div>
+                </div>
             </div>
             {% endfor %}
         </div>
