--- a/deck_builder/auth/templates/signup.html
+++ b/deck_builder/auth/templates/signup.html
@@ -32,6 +32,8 @@
                 <p class="password-match-error hidden" id="password-match-error">Passwords do not match</p>
                 <button class="submit-form" id="submit-form" disabled>Sign Up</button>
             </div>
+            <p class="have-account">Already have an account? <a class="login-link"
+                    href="{{ url_for('auth_bp.login') }}">Log In</a></p>
         </div>
         <div class="right"></div>
     </div>
