--- a/deck_builder/auth/static/styles/signup.css
+++ b/deck_builder/auth/static/styles/signup.css
@@ -123,3 +123,12 @@ body,
 .password-match-error {
     color: var(--color-danger-dark)
 }
+
+.login-link {
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.have-account {
+    margin-top: 10px;
+}
