--- a/deck_builder/homepage/static/styles/homepage.css
+++ b/deck_builder/homepage/static/styles/homepage.css
@@ -1,24 +1,97 @@
-.header{
-    font-family: 'Assistant', sans-serif;
+html,
+body {
+    height: 100% !important;
+}
+
+body {
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 20%, rgba(41,187,241,1) 100%)
+
+}
+
+.header {
+    position: relative;
+    align-self: center;
+    padding: 5px;
+    background: #eaeaea;
+    border-bottom:3px solid #090606;
+    min-height: 50px;
+
+}
+.header img{
+    position: relative;
+    top:10px;
+    left:300px;
+    width: 20%;
+    height: 20%;
+}
+
+.buttonsup{
+    position: relative;
+    top:23px;
+    right:304px;
+    float:right;
+}
+.login{
+    background-color: white;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 10px 32px;
+    transition: 0.3s;
+    border: none;
+    border-radius: 10px;
+    margin: 3px;
+}
+.login:hover{
+    background-color: #eaeaea;
+    border: none;
+}
+
+.register{
+    float:right;
+    width: 150px;
+    background-color: #29bbf1;
+    border: none;
+    transition: 0.3s;
+    cursor: pointer;
+    font-size: 20px;
+    padding: 10px 32px;
+    border-radius: 10px;
+    margin: 3px;
+}
+.register:hover{
+    border: none;
+    background-color: #4e8be6;
+}
+
+.question{
+    position: relative;
+    padding: 20px;
 }
 
 .description{
+    position: relative;
     text-align: center;
     max-width: 700px;
     display: block;
     margin-left: auto;
     margin-right: auto;
+    font-size: 20px;
+}
+
+.hoverinfo{
+    margin-top: 30px;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+    position: relative;
+    display: block;
     align-items: center;
     justify-content: center;
     height: 60vh;
 }
 
 .image-container {
+    position: relative;
     align-items: center;
     display: flex;
     flex-wrap: wrap;
@@ -26,24 +99,51 @@
 }
 
 .image-text-wrapper {
+    position: relative;
     text-align: center;
-    margin: 10px;
+    margin: 20px;
+    font-size: 20px;
+    max-width: 380px;
 }
 
+.image-text-wrapper img:hover{
+    cursor: pointer;
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.image-text-wrapper:hover .textbox{
+    transition: 0.5s;
+    opacity: 1;
+}
+
+
 .image-text-wrapper img {
+    position: relative;
     max-width: 100%;
 }
 
-.textbox {
-    max-width: 380px;
-    align-items: center;
-    display: none;
-    background-color: rgb(114, 95, 95);
-    padding: 10px;
-    border: 1px solid #090606;
+.textbox{
+    background: #eaeaea;
+    border-radius: 2%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    
 }
-
-.button {
-    margin-top: 10px; /* Add margin to separate the button from images */
+.text{
+    font-size: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     text-align: center;
 }
