No more flaschards.

--- a/deck_builder/homepage/templates/homepage.html
+++ b/deck_builder/homepage/templates/homepage.html
@@ -44,7 +44,7 @@
             <div class="image-text-wrapper">
                 <img src="{{ url_for('homepage_bp.static', filename='img/ph2.png')}}" alt="Image 2">
                 <div class="textbox">
-                    <div class="text">Our editor allows you to visualize your flaschards, edit or erase them. You'll
+                    <div class="text">Our editor allows you to visualize your flashcards, edit or erase them. You'll
                         be able to save them in your account as well.
                     </div>
                 </div>
@@ -52,7 +52,7 @@
             <div class="image-text-wrapper">
                 <img src="{{ url_for('homepage_bp.static', filename='img/ph3.png')}}" alt="Image 3">
                 <div class="textbox">
-                    <div class="text">Download your flaschards. They will be compatible with platforms such as
+                    <div class="text">Download your flashcards. They will be compatible with platforms such as
                         Anki!
                     </div>
                 </div>
